# mldevops_exercise

./: .gitignore  .pre-commit-config.yaml  optuna_params.yml  train_ae.py  tune_ae_hyperparams.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
autoencoder/: __init__.py  helpers.py  models.py  pyproject.toml
models/: ae_20241031_172500.pt
