[tool.poetry]
name = "autoencoder"
version = "0.1.0"
description = ""
authors = ["Baey <blazejszargut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
wandb = "^0.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
